admin auth features done
